-add Creacion de Personas y Sucursales, falta la creacion de horarios dentro del crud

--- a/Web.config
+++ b/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <configSections>
-    
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
@@ -19,7 +19,7 @@
     <httpRuntime targetFramework="4.8" />
   </system.web>
   <connectionStrings>
-    <add name="BD_BanderaBlancaEntities" connectionString="metadata=res://*/Models.Model_BD_BanderaBlanca.csdl|res://*/Models.Model_BD_BanderaBlanca.ssdl|res://*/Models.Model_BD_BanderaBlanca.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MSI\SQLEXPRESS;initial catalog=BD_BanderaBlanca;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BD_BanderaBlancaEntities" connectionString="metadata=res://*/Models.BD_Baandera_Blanca.csdl|res://*/Models.BD_Baandera_Blanca.ssdl|res://*/Models.BD_Baandera_Blanca.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MSI\SQLEXPRESS;initial catalog=BD_BanderaBlanca;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
