--- a/packages.config
+++ b/packages.config
@@ -15,4 +15,5 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
+  <package id="ZXing.Net" version="0.16.9" targetFramework="net48" />
 </packages>
